# neutrino_simulator

./: AI_USAGE  CMakeLists.txt  README.md  manage.py  neutrino_simulator  setup.py
include/: constants.hpp  electron_density.hpp  hamiltonian.hpp  pmns_matrix.hpp  simulator(test).hpp  simulator.hpp
neutrino_simulator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: binding.cpp  constants.cpp  electron_density.cpp  hamiltonian.cpp  pmns_matrix.cpp  simulator(3:24).cpp  simulator(4:21).cpp  simulator(4:9).cpp  simulator(test).cpp  simulator.cpp  simulator3:28.cpp
用不到的檔案/: debug_simulation.txt  manage331.py  manage4:10.py  manage4:5.py  neutrino_simulator.cpp  output_data.txt
用不到的檔案/一堆圖片/: neutrino_oscillation_results.txt
